# ChangeLog for net-zope/zope-fixers
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-zope/zope-fixers/ChangeLog,v 1.4 2011/07/09 08:24:23 grobian Exp $

  09 Jul 2011; Fabian Groffen <grobian@gentoo.org> zope-fixers-1.0.ebuild:
  Added Prefix keywords, bug #370597

  07 Jul 2011; Fabian Groffen <grobian@gentoo.org> zope-fixers-1.0.ebuild:
  Marked ~x86-macos

  17 May 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  zope-fixers-1.0.ebuild:
  Allow installation for Python 2.

*zope-fixers-1.0 (05 May 2010)

  05 May 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +zope-fixers-1.0.ebuild, +metadata.xml:
  Initial addition. Ebuild written by me.
