@@ -1,6 +1,9 @@
 # ChangeLog for net-zope/zope-interface
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/zope-interface/ChangeLog,v 1.17 2011/05/17 21:39:39 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zope-interface/ChangeLog,v 1.18 2011/07/23 18:42:19 halcy0n Exp $
+
+  23 Jul 2011; Mark Loeser <halcy0n@gentoo.org> zope-interface-3.6.2.ebuild:
+  Stable for ppc/ppc64; bug #374581
 
 *zope-interface-3.6.2 (17 May 2011)
 
